# vertex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  README.md  deny.toml  docker-compose.yml  docker_env.env  wait-for-postgres.sh
.github/workflows/: rust.yml
bridge/discord/: Cargo.toml
bridge/discord/src/: main.rs
client/: Cargo.toml  package-lock.json  package.json
client/backend/: .crates.toml  Cargo.toml
client/backend/src/: auth.rs  lib.rs  net.rs
client/electron/: index.html  package.json  styles.css  tsconfig.json
client/electron/src/: main.ts
client/examples/: listen.rs
client/gtk/: Cargo.toml  build-appimage.sh  build.rs  installer.rs  rustfmt.toml  vertex.desktop
client/gtk/flatpak/: cf.vertex.gtk.json  flatpak-armv7.sh  flatpak.sh  vertex.desktop
client/gtk/flatpak/arm7/: cf.vertex.gtk.json
client/gtk/res/: ATTRIBUTIONS.md  high-contrast.css  style.css
client/gtk/res/glade/active/: active.glade  add_community.glade  chat.glade  community_entry.glade  community_menu.glade  invite_community.glade  main.glade  message_entry.glade  message_invite.glade  message_menu.glade
client/gtk/res/glade/active/dialog/: create_room.glade  error.glade
client/gtk/res/glade/active/embed/: invite.glade  opengraph.glade
client/gtk/res/glade/loading/: error.glade  loading.glade
client/gtk/res/glade/login/: login.glade
client/gtk/res/glade/register/: register.glade
client/gtk/res/glade/settings/: a11y.glade  administration.glade  settings.glade
client/gtk/src/: auth.rs  client.glade  client.rs  config.rs  connect.rs  main.rs  net.rs  scheduler.rs  screen.rs  token_store.rs  window.rs
client/gtk/src/client/: chat.rs  community.rs  message.rs  notification.rs  profile.rs  room.rs  user.rs
client/gtk/src/client/message/: embed.rs  rich.rs
client/gtk/src/net/: request.rs
client/gtk/src/screen/: active.rs  compromised.rs  connect.rs  loading.rs  login.rs  register.rs  settings.rs
client/gtk/src/screen/active/: chat.rs  community.rs  dialog.rs  message.rs  message_scroll.rs  room.rs
client/gtk/src/screen/glade/: active.glade  login.glade  register.glade  settings.glade
client/gtk/src/screen/glade/active/: active.glade  create_community.glade  join_community.glade
client/gtk/src/screen/settings/: administration.rs
client/gtk/src/screen/settings/administration/: admins_list.rs  parse_search.rs  reports_list.rs  users_search.rs
client/gtk/wix/: lib.wxs  loaders.cache  main.wxs
client/mobile/: README.md  pubspec.yaml
client/mobile/android/app/: build.gradle
client/mobile/android/app/src/debug/: AndroidManifest.xml
client/mobile/android/app/src/main/: AndroidManifest.xml
client/mobile/android/app/src/main/kotlin/cf/vertex/mobile/: MainActivity.kt
client/mobile/ios/Runner.xcodeproj/: project.pbxproj
client/mobile/lib/: main.dart
client/src/: auth.rs  embed.rs  error.rs  event_handler.rs  lib.rs  main.rs  net.rs  profile_cache.rs  util.rs
common/: Cargo.toml  build.rs
common/src/: events.rs  lib.rs  request.rs  requests.rs  responses.rs  structures.rs  types.rs
common/src/proto/: events.proto  mod.rs  responses.proto  structures.proto  types.proto
common/src/proto/requests/: active.proto  administration.proto  auth.proto
common/src/request/: active.rs  auth.rs
common/src/requests/: active.rs  administration.rs  auth.rs
server/: Cargo.toml  db.conf  db.conf.docker
server/docker/: .dummy.ignore  config.toml  env.env
server/src/: auth.rs  community.rs  config.rs  database.rs  main.rs
server/src/client/: auth.rs  mod.rs  server.rs  session.rs  user.rs
server/src/client/session/: administrator.rs  manager.rs  mod.rs  regular_user.rs
server/src/community/: actor.rs  mod.rs  server.rs
server/src/database/: administrators.rs  communities.rs  community_membership.rs  invite_code.rs  message.rs  mod.rs  reports.rs  room_membership.rs  room_watching_state.rs  rooms.rs  token.rs  user.rs  user_room_states.rs
server/src/federation/: mod.rs  server.rs  session.rs
