[package]
name = "vertex"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bitflags = "^1"
prost = "^0.6.1"

[build-dependencies]
prost-build = "^0.6.1"
