[package]
name = "vertex_client_gtk"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>", "gegy1000 <gegy1000@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1
debug = false
lto = false
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."vertex_client_gtk"]
opt-level = 1

[dependencies]
gio = "0.8"
glib = "0.9"
gdk = "0.12"
gdk-pixbuf = "0.8"
gtk = { version = "0.8", features = ["v3_20"] }

url = { version = "2.1", features = ["serde"] }

uuid = { version = "^0.8", features = ["serde", "v4"] }
keyring = "^0.7"

chrono = "0.4"

rand = "0.7"
base64 = "0.11"

serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
serde_json = "1.0"
serde_urlencoded = "0.6"

futures = "0.3"

tokio = { version = "0.2.9", features = ["full"] }

tungstenite = "0.9"
tokio-tungstenite = { git = "https://github.com/snapview/tokio-tungstenite.git", features = ["tls"] }

hyper = "0.13"
hyper-tls = "0.4"

native-tls = "0.2"
tokio-tls = "0.3"

once_cell = "1.3"

ears = "0.7"

vertex = { path = "../../common" }

[target.'cfg(unix)'.dependencies]
notify-rust = "4.0.0-beta.2"

[target.'cfg(windows)'.dependencies]
notifica = "1"
