[package]
name = "vertex_client_gtk"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>", "gegy1000 <gegy1000@gmail.com>"]
edition = "2018"

homepage = "https://vertex.cf/"
repository = "https://github.com/Restioson/vertex"

[package.metadata.wix]
input = "wix/main.wxs"
include = ["wix/generated/resources.wxs", "wix/generated/binaries.wxs"]

[package.metadata.winres]
OriginalFilename = "vertex_client.exe"
FileDescription = "Vertex Client (GTK)"
LegalCopyright = "Copyright © 2020"

[features]
deploy = []

[profile.dev]
opt-level = 1
debug = false
lto = false
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."vertex_client_gtk"]
opt-level = 1

[dependencies]
gio = "0.8"
glib = "0.9"
gdk = "0.12"
pango = "0.8"
gdk-pixbuf = "0.8"
gtk = { version = "0.8", features = ["v3_20"] }
atk = "0.8"

url = { version = "2.1", features = ["serde"] }

uuid = { version = "^0.8", features = ["serde", "v4"] }
keyring = "0.8"

chrono = "0.4"
ordinal = "0.2"

rand = "0.7"
base64 = "0.11"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"

futures = "0.3"

tokio = { version = "0.2.9", features = ["full"] }

tungstenite = "0.9"
tokio-tungstenite = { git = "https://github.com/snapview/tokio-tungstenite.git", features = ["tls"] }

scraper = "0.11"
linkify = "0.4"

hyper = "0.13"
hyper-tls = "0.4"

native-tls = "0.2"
tokio-tls = "0.3"

once_cell = "1.3"
lazy_static = "1.4"

ears = "0.7"
confy = "0.4"
arc-swap = "0.4"

vertex = { path = "../../common" }

[build-dependencies]
cfg-if = "0.1"

[target.'cfg(unix)'.dependencies]
notify-rust = "4.0.0-beta.2"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
path-slash = "0.1"
